@@ -1,9 +1,5 @@
 package scarlet.model;
 
-<<<<<<< HEAD
-public class Wallet {
-}
-=======
 import lombok.Getter;
 import lombok.ToString;
 
@@ -11,48 +7,48 @@ import java.time.OffsetDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
 
 @ToString
 public abstract class Wallet {
+
     @Getter
-    private final BankService serviceType;
+    private final BankService service;
+
     protected final List<Money> money;
 
-    public Wallet(BankService serviceType) {
-        this.serviceType = serviceType;
+    public Wallet(final BankService serviceType) {
+        this.service = serviceType;
         this.money = new ArrayList<>();
     }
 
-    protected List<Money> generateMoney(final long amount, final String description) {
-        var history = new MoneyAudit(UUID.randomUUID(), serviceType, description, OffsetDateTime.now());
-        return Stream.generate(() -> new Money(history)).limit(amount).toList();
+    protected List<Money> generateMoney(final long amount, final String description){
 
+        var history = new MoneyAudit(UUID.randomUUID(), service, description, OffsetDateTime.now());
+        return Stream.generate(()-> new Money(history)).limit(amount).toList();
     }
 
-    public long getFunds() {
+    public long getFunds(){
         return money.size();
     }
 
-    public void addMoney(final List<Money> money, final BankService serviceType, final String description) {
-        var history = new MoneyAudit(UUID.randomUUID(), serviceType, description, OffsetDateTime.now());
+    public void addMoney(final List<Money> money, final BankService service, final String description){
+        var history = new MoneyAudit(UUID.randomUUID(), service, description, OffsetDateTime.now());
         money.forEach(m -> m.addHistory(history));
         this.money.addAll(money);
     }
 
-    public List<Money> reduceMoney(final long amount) {
+    public List<Money> reduceMoney(final long amount){
         List<Money> toRemove = new ArrayList<>();
-        for (int i = 0; i < amount; i++) {
+        for (int i=0; i<amount; i++){
             toRemove.add(this.money.removeFirst());
         }
         return toRemove;
     }
 
-    public List<MoneyAudit> getFinancialTransactions() {
-    return money.stream().flatMap(m -> m.getHistory().stream()).collect(Collectors.toList());
+    public List<MoneyAudit> getFinancialTransactions(){
+        return money.stream().flatMap(m -> m.getHistory().stream()).toList();
     }
-
 }
-
->>>>>>> 5849420 (Primeiro Commit)
+;
